<resources>
    <string name="app_name">Chat app</string>
    <string name="txt_enter">Entrar</string>
    <string name="btn_new_account">Não tem uma conta? Clique aqui!</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Senha</string>
    <string name="txt_name">Name</string>
    <string name="txt_create">Criar</string>
    <string name="txt_select_photo">Selecionar foto</string>
    <string name="txt_contacts">Contatos</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_send">Enviar</string>
    <string name="string_message_hint">Digite a mensagem</string>
    <string name="messages_screen_name">Conversas</string>
</resources>