<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_setPhoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/txt_select_photo"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/bg_btn_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_selected_photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="@id/btn_setPhoto"
        app:layout_constraintEnd_toEndOf="@id/btn_setPhoto"
        app:layout_constraintTop_toTopOf="@id/btn_setPhoto"
        app:civ_border_color="@android:color/holo_green_dark"
        app:civ_border_width="2dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_setPhoto"
        android:padding="10dp"
        android:inputType="textPersonName"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg_edittext_rounded"
        android:hint="@string/txt_name"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_name"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg_edittext_rounded"
        android:hint="@string/txt_email"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        android:padding="10dp"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg_edittext_rounded"
        android:hint="@string/txt_password"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_btn_rounded"
        android:text="@string/txt_create"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/edit_password"
        app:layout_constraintStart_toStartOf="@id/edit_password"
        app:layout_constraintEnd_toEndOf="@id/edit_password"
        />

</androidx.constraintlayout.widget.ConstraintLayout>